--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Henry Is Online</title>
     <style>
-
+        html, body{
+            height: 100%;
+            margin: 0;
+        }
     </style>
 </head>
 <body>
