--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
             height: 100%;
             margin: 0;
         }
+
+        body{
+            background-image: url(startpage.png);
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .content{
+            color: white;
+            font-size: 2rem;
+            font-family: sans-serif;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
